--- a/frontEnd/src/components/LoginPopup/LoginPopup.scss
+++ b/frontEnd/src/components/LoginPopup/LoginPopup.scss
@@ -3,6 +3,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.56);
     display: grid;
 
